update author information in package.json

--- a/my-app/package.json
+++ b/my-app/package.json
@@ -14,8 +14,8 @@
   },
   "keywords": [],
   "author": {
-    "name": "cx267",
-    "email": "cx267@cornell.edu"
+    "name": "",
+    "email": ""
   },
   "license": "MIT",
   "dependencies": {
