update author information in package.json

--- a/my-app/package.json
+++ b/my-app/package.json
@@ -14,8 +14,8 @@
   },
   "keywords": [],
   "author": {
-    "name": "",
-    "email": ""
+    "name": "cx18121",
+    "email": "charlie.l.xue@gmail.com"
   },
   "license": "MIT",
   "dependencies": {
