--- a/gatekeeper/package.json
+++ b/gatekeeper/package.json
@@ -1,18 +1,31 @@
 {
   "name": "gatekeeper",
   "version": "0.1.0",
+  "description": "Time limit management app with AI-based access control",
   "main": "src/main.js",
+  "author": "cx18121",
   "scripts": {
-    "start": "electron .",
+    "start": "electron-forge start",
     "dev": "electronmon .",
-    "build:icon": "node scripts/convert-icon.js"
+    "build:icon": "node scripts/convert-icon.js",
+    "package": "electron-forge package",
+    "make": "electron-forge make"
   },
   "dependencies": {
     "@google/genai": "^1.40.0",
+    "electron-squirrel-startup": "^1.0.1",
     "electron-store": "^8.2.0",
     "ps-list": "^8.1.1"
   },
   "devDependencies": {
+    "@electron-forge/cli": "^7.11.1",
+    "@electron-forge/maker-deb": "^7.11.1",
+    "@electron-forge/maker-rpm": "^7.11.1",
+    "@electron-forge/maker-squirrel": "^7.11.1",
+    "@electron-forge/maker-zip": "^7.11.1",
+    "@electron-forge/plugin-auto-unpack-natives": "^7.11.1",
+    "@electron-forge/plugin-fuses": "^7.11.1",
+    "@electron/fuses": "^1.8.0",
     "electron": "^31.0.0",
     "electronmon": "^2.0.3",
     "png-to-ico": "^2.1.0",
